# jigglesmccrusty

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONNECTOR_IMPLEMENTATION.md  DEPLOYMENT.md  Dockerfile  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.override.yml.example  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.cjs
agents/: __init__.py  commander.py  device_remediator.py  evidence_clerk.py  hardening_coach.py  identity_locker.py  network_steward.py  platform_reporter.py
ai_soc/: Dockerfile  __init__.py  config.py  kafka.py  llm.py  main.py  models.py  pyproject.toml  service.py  storage.py
ai_soc/ai_soc/: __init__.py  config.py  main.py  models.py
ai_soc/ai_soc/services/: alerts.py  llm.py  quota_manager.py  storage.py  telemetry.py  threat_intel.py
api/: __init__.py  main.py  routes.py
connectors/: carrier.py  gmail.py  msgraph.py  router.py  vault.py
core/: __init__.py  audit.py  dag.py  models.py  orchestrator.py  policy.py
docs/: IMPLEMENTATION_SUMMARY.md  INDEX.md  ORCHESTRATION.md  USAGE_EXAMPLES.md  UTILITIES.md  audit_log.md  models.md  playbooks.md
examples/: README.md  audit_demo.py  demo_commander.py  models_usage.py  orchestrator_demo.py
hub/: __init__.py  main.py  models.py  orchestrator.py  storage.py
playbooks/: README.md  device_compromise.yaml  device_compromise_v1.yaml  email_takeover_v1.yaml  router_lockdown.yaml  router_lockdown_v1.yaml
scripts/: README.md  bootstrap.sh  demo.sh  download.sh  (+2 more)
(+44 files in other folders)
