[tool.poetry]
name = "ai-soc"
version = "0.1.0"
description = "AI-powered Security Operations Center microservice"
authors = ["AI Assistant <assistant@example.com>"]
license = "MIT"
readme = "../README.md"
packages = [{include = "ai_soc"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
aiokafka = "^0.10.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = {extras = ["socks"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
